[gd_scene load_steps=18 format=2]

[ext_resource path="res://addons/ResolutionManager/icons/iconfinder_letter_X_red_1553096.png" type="Texture" id=1]
[ext_resource path="res://addons/ResolutionManager/CustomResWindow.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.12549, 0.258824, 0.392157, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.00784314, 0.313726, 0.615686, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.12549, 0.258824, 0.392157, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0.4, 0.792157, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.113725, 0.133333, 0.152941, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.113725, 0.133333, 0.152941, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.113725, 0.133333, 0.152941, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.113725, 0.133333, 0.152941, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.113725, 0.133333, 0.152941, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.184314, 0.215686, 0.247059, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0745098, 0.521569, 0.819608, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.113725, 0.133333, 0.152941, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.184314, 0.215686, 0.247059, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
border_blend = true

[sub_resource type="StyleBoxLine" id=10]
color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.113725, 0.133333, 0.152941, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0980392, 0.109804, 0.168627, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0745098, 0.521569, 0.819608, 1 )
expand_margin_top = 23.0

[sub_resource type="Theme" id=20]
Button/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource( 15 )
Button/styles/hover = SubResource( 16 )
Button/styles/normal = SubResource( 6 )
Button/styles/pressed = SubResource( 17 )
LineEdit/colors/clear_button_color = Color( 0.878431, 0.878431, 0.878431, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.941176, 0.941176, 0.941176, 1 )
LineEdit/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/selection_color = Color( 0.490196, 0.490196, 0.490196, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = SubResource( 18 )
LineEdit/styles/normal = SubResource( 14 )
LineEdit/styles/read_only = null
OptionButton/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
OptionButton/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
OptionButton/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
OptionButton/colors/font_color_pressed = Color( 1, 1, 1, 1 )
OptionButton/constants/arrow_margin = 2
OptionButton/constants/hseparation = 2
OptionButton/fonts/font = null
OptionButton/icons/arrow = null
OptionButton/styles/disabled = null
OptionButton/styles/focus = SubResource( 19 )
OptionButton/styles/hover = SubResource( 3 )
OptionButton/styles/normal = SubResource( 3 )
OptionButton/styles/pressed = SubResource( 3 )
Panel/styles/panel = SubResource( 2 )
Panel/styles/panelf = SubResource( 2 )
Panel/styles/panelnc = SubResource( 2 )
PopupMenu/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = null
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = SubResource( 11 )
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = SubResource( 4 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = SubResource( 10 )
PopupPanel/styles/panel = SubResource( 1 )
WindowDialog/colors/title_color = Color( 1, 1, 1, 1 )
WindowDialog/constants/close_h_ofs = 18
WindowDialog/constants/close_v_ofs = 18
WindowDialog/constants/scaleborder_size = 10
WindowDialog/constants/title_height = 20
WindowDialog/fonts/title_font = null
WindowDialog/icons/close = ExtResource( 1 )
WindowDialog/icons/close_highlight = ExtResource( 1 )
WindowDialog/styles/panel = SubResource( 12 )

[node name="CustomResWindow" type="WindowDialog"]
visible = true
margin_left = 4.19003
margin_top = 32.1236
margin_right = 312.19
margin_bottom = 261.124
theme = SubResource( 20 )
window_title = "Add Custom Resolution"
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 4.0
margin_right = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 267.0
margin_bottom = 225.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 267.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "*use for both test and base resolutions."

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 267.0
margin_bottom = 182.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer"]
margin_right = 247.0
margin_bottom = 140.0
custom_constants/separation = 16
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 9.0
margin_right = 247.0
margin_bottom = 39.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_constants/separation = 17

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 8.0
margin_right = 38.0
margin_bottom = 22.0
text = "Label:"

[node name="ResLabel" type="LineEdit" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 55.0
margin_right = 247.0
margin_bottom = 30.0
size_flags_horizontal = 3
align = 1
clear_button_enabled = true
placeholder_text = "Enter Label"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 247.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_constants/separation = 15

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 8.0
margin_right = 42.0
margin_bottom = 22.0
text = "Width:"

[node name="Width" type="LineEdit" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 57.0
margin_right = 247.0
margin_bottom = 30.0
size_flags_horizontal = 3
align = 1
clear_button_enabled = true
placeholder_text = "Enter Width"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 101.0
margin_right = 247.0
margin_bottom = 131.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_top = 8.0
margin_right = 46.0
margin_bottom = 22.0
text = "Height:"

[node name="Height" type="LineEdit" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 56.0
margin_right = 247.0
margin_bottom = 30.0
size_flags_horizontal = 3
align = 1
clear_button_enabled = true
placeholder_text = "Enter Height"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 190.0
margin_right = 267.0
margin_bottom = 225.0
rect_min_size = Vector2( 0, 35 )
size_flags_vertical = 0
custom_constants/separation = 50
alignment = 1

[node name="Ok" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 33.0
margin_right = 108.0
margin_bottom = 30.0
rect_min_size = Vector2( 75, 30 )
size_flags_vertical = 0
text = "Ok"

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 158.0
margin_right = 233.0
margin_bottom = 30.0
rect_min_size = Vector2( 75, 30 )
size_flags_vertical = 0
text = "Cancel"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Ok" to="." method="_on_Ok_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
